refactor: removed incoming dmg increase in LegendaryReliquary