@@ -10,7 +10,6 @@ import com.ebicep.warlords.pve.weapons.weapontypes.legendaries.AbstractLegendary
 import com.ebicep.warlords.pve.weapons.weapontypes.legendaries.LegendaryTitles;
 import com.ebicep.warlords.util.java.Pair;
 
-import java.util.Arrays;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.UUID;
@@ -18,7 +17,7 @@ import java.util.UUID;
 public class LegendaryReliquary extends AbstractLegendaryWeapon {
 
     public static final int INCOMING_DAMAGE_INCREASE = 50;
-    public static final int INCOMING_DAMAGE_INCREASE_PER_UPGRADE = 1;
+//    public static final int INCOMING_DAMAGE_INCREASE_PER_UPGRADE = 1;
     public static final int OUTGOING_DAMAGE_INCREASE = 30;
     public static final float OUTGOING_DAMAGE_INCREASE_PER_UPGRADE = 2.5f;
 
@@ -45,7 +44,7 @@ public class LegendaryReliquary extends AbstractLegendaryWeapon {
     public void applyToWarlordsPlayer(WarlordsPlayer player, PveOption pveOption) {
         super.applyToWarlordsPlayer(player, pveOption);
 
-        float incomingDamageIncrease = 1 + (INCOMING_DAMAGE_INCREASE + INCOMING_DAMAGE_INCREASE_PER_UPGRADE * getTitleLevel()) / 100f;
+        float incomingDamageIncrease = 1 + INCOMING_DAMAGE_INCREASE / 100f;
         float outgoingDamageIncrease = 1 + (OUTGOING_DAMAGE_INCREASE + OUTGOING_DAMAGE_INCREASE_PER_UPGRADE * getTitleLevel()) / 100f;
         player.getCooldownManager().addCooldown(new PermanentCooldown<>(
                 "Reliquary",
@@ -73,8 +72,7 @@ public class LegendaryReliquary extends AbstractLegendaryWeapon {
 
     @Override
     public String getPassiveEffect() {
-        return "Incoming damage increased by " +
-                formatTitleUpgrade(INCOMING_DAMAGE_INCREASE + INCOMING_DAMAGE_INCREASE_PER_UPGRADE * getTitleLevel(), "%") + ".\n" +
+        return "Incoming damage increased by " + INCOMING_DAMAGE_INCREASE + "%.\n" +
                 "Outgoing damage increased by " +
                 formatTitleUpgrade(OUTGOING_DAMAGE_INCREASE + OUTGOING_DAMAGE_INCREASE_PER_UPGRADE * getTitleLevel(), "%") + ".";
     }
@@ -131,11 +129,7 @@ public class LegendaryReliquary extends AbstractLegendaryWeapon {
 
     @Override
     public List<Pair<String, String>> getPassiveEffectUpgrade() {
-        return Arrays.asList(
-                new Pair<>(
-                        formatTitleUpgrade(INCOMING_DAMAGE_INCREASE + INCOMING_DAMAGE_INCREASE_PER_UPGRADE * getTitleLevel(), "%"),
-                        formatTitleUpgrade(INCOMING_DAMAGE_INCREASE + INCOMING_DAMAGE_INCREASE_PER_UPGRADE * getTitleLevelUpgraded(), "%")
-                ),
+        return List.of(
                 new Pair<>(
                         formatTitleUpgrade(OUTGOING_DAMAGE_INCREASE + OUTGOING_DAMAGE_INCREASE_PER_UPGRADE * getTitleLevel(), "%"),
                         formatTitleUpgrade(OUTGOING_DAMAGE_INCREASE + OUTGOING_DAMAGE_INCREASE_PER_UPGRADE * getTitleLevelUpgraded(), "%")
